platform/scripts/edbridge-svc-fix.yaml
apiVersion: v1
kind: Service
metadata:
  name: edbridge
  namespace: i3-edbridge
spec:
  selector:
    app: edbridge
  ports:
    - name: http
      port: 80
      targetPort: 80
